<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/naval_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.ucn.disc.dsm.atorres.navalbattle.game.activities.MenuActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Batalla Naval"
            android:textColor="@color/colorPrussianBlue"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btn_vs_cpu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorSanPatrickBlue"
            android:textColor="@color/colorPearlWhite"
            android:text="@string/btn_vs_cpu" />

        <Button
            android:id="@+id/btn_vs_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorSanPatrickBlue"
            android:textColor="@color/colorPearlWhite"
            android:text="@string/btn_vs_player" />

        <Button
            android:id="@+id/btn_rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorSanPatrickBlue"
            android:textColor="@color/colorPearlWhite"
            android:text="@string/btn_rules" />
    </LinearLayout>
</RelativeLayout>
